# dubbo-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
cross-lang-tests/: Cargo.toml  build.rs
cross-lang-tests/proto/: triple_test.proto
cross-lang-tests/src/: lib.rs
cross-lang-tests/tests/: config_test.rs  configcenter_test.rs  cross_lang_test.rs  dubbo_tcp_test.rs  governance_test.rs  hessian2_test.rs  instance_test.rs  jsonrpc_test.rs  logger_test.rs  metadata_test.rs  registry_test.rs  serialization_test.rs  tls_test.rs  triple_test.rs
dubbo/: Cargo.toml  README.md
dubbo-client/: Cargo.toml  README.md
dubbo-client/src/: lib.rs
dubbo-cluster/: Cargo.toml  README.md
dubbo-cluster/src/: lib.rs
dubbo-codegen/: Cargo.toml  README.md
dubbo-codegen/src/: lib.rs
dubbo-common/: Cargo.toml  README.md
dubbo-common/src/: constants.rs  error.rs  extension.rs  lib.rs  node.rs  url.rs
dubbo-config/: Cargo.toml  README.md
dubbo-config/src/: lib.rs
dubbo-configcenter/: Cargo.toml  README.md
dubbo-configcenter-apollo/: Cargo.toml  README.md
dubbo-configcenter-apollo/src/: lib.rs
dubbo-configcenter-apollo/tests/: integration_test.rs
dubbo-configcenter-nacos/: Cargo.toml  README.md
dubbo-configcenter-nacos/src/: lib.rs
dubbo-configcenter-nacos/tests/: integration_test.rs
dubbo-configcenter-zookeeper/: Cargo.toml  README.md
dubbo-configcenter-zookeeper/src/: lib.rs
dubbo-configcenter-zookeeper/tests/: integration_test.rs
dubbo-configcenter/src/: lib.rs
dubbo-filter/: Cargo.toml  README.md
dubbo-filter/src/: lib.rs
dubbo-loadbalance/: Cargo.toml  README.md
dubbo-loadbalance/src/: lib.rs
dubbo-logger/: Cargo.toml  README.md
dubbo-logger/src/: lib.rs
dubbo-macros/: Cargo.toml  README.md
dubbo-macros/src/: lib.rs
dubbo-macros/tests/: client_macro.rs  service_macro.rs
dubbo-metadata/: Cargo.toml  README.md
dubbo-metadata/src/: lib.rs
dubbo-metrics/: Cargo.toml  README.md
dubbo-metrics/src/: lib.rs
dubbo-protocol/: Cargo.toml  README.md
dubbo-protocol-dubbo/: Cargo.toml  README.md
dubbo-protocol-dubbo/src/: body.rs  codec.rs  lib.rs  protocol.rs  transport.rs
dubbo-protocol-grpc/: Cargo.toml  README.md
dubbo-protocol-grpc/src/: lib.rs
dubbo-protocol-jsonrpc/: Cargo.toml  README.md
dubbo-protocol-jsonrpc/src/: lib.rs
dubbo-protocol-rest/: Cargo.toml  README.md
dubbo-protocol-rest/src/: lib.rs
dubbo-protocol-triple/: Cargo.toml  README.md  build.rs
dubbo-protocol-triple/proto/: triple_wrapper.proto
dubbo-protocol-triple/src/: lib.rs
dubbo-protocol/src/: lib.rs
dubbo-proxy/: Cargo.toml  README.md
dubbo-proxy/src/: lib.rs
dubbo-registry/: Cargo.toml  README.md
dubbo-registry-etcd/: Cargo.toml  README.md
dubbo-registry-etcd/src/: lib.rs
dubbo-registry-nacos/: Cargo.toml  README.md
dubbo-registry-nacos/src/: lib.rs
dubbo-registry-redis/: Cargo.toml  README.md
dubbo-registry-redis/src/: lib.rs
dubbo-registry-zookeeper/: Cargo.toml  README.md
dubbo-registry-zookeeper/src/: lib.rs
dubbo-registry/src/: lib.rs
dubbo-remoting/: Cargo.toml  README.md
dubbo-remoting/src/: lib.rs
dubbo-serialization/: Cargo.toml  README.md
dubbo-serialization-hessian2/: Cargo.toml  README.md
dubbo-serialization-hessian2/src/: class_def.rs  codec.rs  decoder.rs  dubbo_types.rs  lib.rs  type_descriptor.rs  type_registry.rs  types.rs
dubbo-serialization-hessian2/tests/: roundtrip.rs
dubbo-serialization-json/: Cargo.toml  README.md
dubbo-serialization-json/src/: lib.rs
dubbo-serialization-protobuf/: Cargo.toml  README.md
dubbo-serialization-protobuf/src/: lib.rs
dubbo-serialization/src/: lib.rs
dubbo-server/: Cargo.toml  README.md
dubbo-server/src/: lib.rs
dubbo-tls/: Cargo.toml  README.md
dubbo-tls/src/: lib.rs
dubbo-tracing/: Cargo.toml  README.md
dubbo-tracing/src/: lib.rs
dubbo/src/: instance.rs  lib.rs
examples/: README.md
examples/canary-release/: Cargo.toml
examples/canary-release/src/: main.rs
examples/codegen-demo/: Cargo.toml  build.rs
examples/codegen-demo/proto/: greeter.proto
examples/codegen-demo/src/: main.rs
examples/dubbo2-interop/: Cargo.toml
examples/dubbo2-interop/src/: main.rs
examples/failover/: Cargo.toml
examples/failover/src/: main.rs
examples/filter-chain/: Cargo.toml
examples/filter-chain/src/: main.rs
examples/hello-world/: Cargo.toml
examples/hello-world/src/: main.rs
examples/instance-demo/: Cargo.toml  build.rs
examples/instance-demo/src/: main.rs
examples/nacos-discovery/: Cargo.toml
examples/nacos-discovery/src/: main.rs
examples/phone-dialing/: Cargo.toml  build.rs  dubbo.yaml
examples/phone-dialing/proto/: exchange.proto
examples/phone-dialing/src/: main.rs
examples/zk-discovery/: Cargo.toml
examples/zk-discovery/src/: main.rs
