[package]
name = "dubbo-rs-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "High-level client API for connecting to Dubbo RPC services"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
dubbo-rs-common = { workspace = true }
dubbo-rs-proxy = { workspace = true }
dubbo-rs-config = { workspace = true }
dubbo-rs-protocol = { workspace = true }
dubbo-rs-protocol-triple = { workspace = true }
dubbo-rs-filter = { workspace = true }
dubbo-rs-cluster = { workspace = true }
dubbo-rs-loadbalance = { workspace = true }
dubbo-rs-registry = { workspace = true }
async-trait = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
