[package]
name = "dubbo-rs-codegen"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "protoc code generation plugin for Apache Dubbo Rust"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
prost-build = { workspace = true }
tonic-prost-build = { workspace = true }
prost = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[package.metadata]
# protoc code generation plugin
# Generates Dubbo integration wrappers from .proto files

[lints]
workspace = true
