[package]
name = "dubbo-rs-config"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Configuration management for Apache Dubbo Rust with YAML support and builder pattern"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
dubbo-rs-common = { workspace = true }
dubbo-rs-tls = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }

[lints]
workspace = true
