[package]
name = "dubbo-rs-configcenter-nacos"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Nacos-backed configuration center for Apache Dubbo Rust"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
dubbo-rs-common = { workspace = true }
dubbo-rs-configcenter = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
mockito = "1"
tokio = { workspace = true }

[lints]
workspace = true
