[package]
name = "dubbo-rs-configcenter-zookeeper"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "ZooKeeper-backed configuration center for Apache Dubbo Rust"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
dubbo-rs-common = { workspace = true }
dubbo-rs-configcenter = { workspace = true }
zookeeper = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
