[package]
name = "dubbo-rs-configcenter"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Dynamic configuration center abstraction for Apache Dubbo Rust"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
dubbo-rs-common = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
