[package]
name = "dubbo-rs-filter"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Filter chain framework and built-in governance filters for Apache Dubbo Rust"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
dubbo-rs-common = { workspace = true }
dubbo-rs-protocol = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
dashmap = { workspace = true }

[lints]
workspace = true
