[package]
name = "dubbo-rs-macros"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Procedural macros for Apache Dubbo Rust — #[dubbo_rs_service] and #[dubbo_rs_client]"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }

[dev-dependencies]
dubbo-rs-common = { workspace = true }
dubbo-rs-protocol = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
