[package]
name = "dubbo-rs-metadata"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Metadata center for application-level service discovery in Apache Dubbo Rust"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dashmap = { workspace = true }
async-trait = { workspace = true }
zookeeper = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
