[package]
name = "dubbo-rs-protocol-grpc"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Native gRPC protocol support for Apache Dubbo Rust"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
dubbo-rs-common = { workspace = true }
dubbo-rs-protocol = { workspace = true }
tonic = { workspace = true }
http = { workspace = true }
http-body-util = "0.1"
bytes = { workspace = true }
tower = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
