[package]
name = "dubbo-rs-protocol-jsonrpc"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "JSON-RPC 2.0 over HTTP protocol for Apache Dubbo Rust"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
dubbo-rs-common = { workspace = true }
dubbo-rs-protocol = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
