[package]
name = "dubbo-rs-protocol-rest"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "RESTful HTTP protocol for Apache Dubbo Rust"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
dubbo-rs-common = { workspace = true }
dubbo-rs-protocol = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
