[package]
name = "dubbo-rs-protocol"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Protocol abstraction for Apache Dubbo Rust — Protocol, Invoker, Exporter traits"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
dubbo-rs-common = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
