[package]
name = "dubbo-rs-proxy"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Proxy factory abstraction for creating RPC invoker proxies in Apache Dubbo Rust"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
dubbo-rs-common = { workspace = true }
dubbo-rs-protocol = { workspace = true }
dubbo-rs-cluster = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
