[package]
name = "dubbo-rs-registry-nacos"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Nacos-based service registry for Apache Dubbo Rust"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
dubbo-rs-common = { workspace = true }
dubbo-rs-registry = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }

[lints]
workspace = true
