[package]
name = "dubbo-rs-registry-redis"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Redis-based service registry for Apache Dubbo Rust"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
dubbo-rs-common = { workspace = true }
dubbo-rs-registry = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
redis = { version = "0.27", features = ["connection-manager", "tokio-comp"] }
tokio-stream = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
