[package]
name = "dubbo-rs-registry-zookeeper"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "ZooKeeper-based service registry for Apache Dubbo Rust"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
dubbo-rs-common = { workspace = true }
dubbo-rs-registry = { workspace = true }
zookeeper = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
