[package]
name = "dubbo-rs-registry"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Service registration and discovery abstraction for Apache Dubbo Rust"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
dubbo-rs-common = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
dashmap = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
