[package]
name = "dubbo-rs-serialization-hessian2"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Full Hessian 2.0 serialization codec for Apache Dubbo cross-language RPC"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
dubbo-rs-common = { workspace = true }
dubbo-rs-serialization = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
byteorder = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
